# open-agent-spec

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEX_REVIEW_SECTION5.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORTEX_INTEGRATION.md  LICENSE  NOTICE  README.md  STATE_OF_THE_NATION.md  bad_file.py  example.py  failed-log.txt  github_actions_error_workflow.py  pyproject.toml  pytest.ini  repair-input.json  repair-output.json  repair-plan.json  requirements.txt  ruff.toml  test-results.xml
.agents/: ci-failure-repair.yaml  codex-runner.yaml  hello-world-agent.yaml  review.yaml
.agents/personas/: manager.yaml  writer.yaml
.github/: CODEOWNERS  ci-error-analysis.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci-error-analysis.yaml  ci-failure-repair.yml  ci.yml  feature-test.yml  integration-tests.yml  pr-test.yml  publish.yml  run-hello-world-agent.yml  test-enhanced.yml  test.yml
DEMO/: README.md  researcher.yaml  run.sh
Website/: README.md  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.tsbuildinfo
Website/api/: cli_generate.py
Website/app/: globals.css  layout.tsx  page.tsx
Website/app/examples/: page.tsx
Website/app/registry/: page.tsx
Website/components/: InstallCard.tsx
Website/components/editor/: YamlEditor.tsx
Website/components/layout/: ResultTabs.tsx  (+1 more)
Website/content/: codexSpec.ts  codexSpec.yaml  defaultSpec.ts  defaultSpec.yaml  multiTaskSpec.ts  researchAssistantSpec.ts  researchAssistantSpec.yaml  toolsSpec.ts
Website/scripts/: invoke_generator.py
agents/: codex_runner.py
docs/: REFERENCE.md  TEST_PLAN_1.2.3.md  TEST_PLAN_1.2.5.md  TEST_PLAN_1.2.6.md  TEST_PLAN_1.2.7.md  TEST_PLAN_1.2.8.md  TEST_PLAN_1.2.9.md  TEST_PLAN_1.3.0.md
docs/packaging/: HOMEBREW.md
docs/planning/: 2026-06-westpac-engagement.md
docs/proposals/: loops.md  markdown-interop.md
examples/analyst-agent/: README.md  agent.py  agent.spec.yaml  requirements.txt
examples/chat-agent/: chat.py  spec.yaml
examples/file-reader/: a-file.txt  file-reader.yaml  notes.txt  run.sh
examples/mcp-local/: agent.yaml  run.sh  server.py
examples/mcp-search/: README.md  mcp-search.yaml
examples/memory-chat/: README.md  input.json  pipeline.yaml
examples/multi-agent/: .env.example  README.md  __init__.py  board.py  dashboard.py  loop.py  registry.py  requirements.txt  run.py  runner.py
examples/registry-demo/: input.json  pipeline.yaml  run.sh
examples/sandboxed-agent/: README.md  spec.yaml
examples/skill-wrapper/: README.md  SKILL.md  spec.yaml
examples/spec-composition/: coordinator.yaml  run.sh
npm/: .npmignore  README.md  package-lock.json  package.json
npm/src/: cli.ts  index.ts  loader.ts  prompts.ts  registry.ts  runner.ts  types.ts
oas_cli/: __init__.py  __main__.py  banner.py  code_generation.py  core.py  data_preparation.py  exceptions.py  generators.py  main.py  reasoning.py  runner.py  runtime.py  spec_test.py  tools.py  ui.py  usage.py  utils.py  validators.py
oas_cli/adapters/: __init__.py  codex_adapter.py
oas_cli/generation/: __init__.py  artifacts.py  constants.py  contracts_codegen.py  intelligence_codegen.py  json_example.py  multi_step_codegen.py  pydantic_codegen.py  schema_defaults.py  single_step_codegen.py  spec_config.py  task_codegen.py  task_functions.py  task_preamble.py  tool_task_codegen.py  types_mapping.py
oas_cli/orchestration/: __init__.py  board.py  dashboard.py  loop.py  registry.py
oas_cli/providers/: __init__.py  anthropic_http.py  base.py  codex.py  custom.py  openai_http.py  registry.py
oas_cli/schemas/: oas-schema.json
oas_cli/templates/: aac-change.diff  aac-example.yaml  aac-review.yaml  agent.py.j2  github-actions-error-collector.yaml  minimal-agent-tool-usage.yaml  minimal-agent.yaml  minimal-multi-task-agent.yaml  security-incident-responder.yaml  security-risk-assessor.yaml  security-threat-analyzer.yaml
oas_cli/tool_providers/: __init__.py  base.py  custom.py  mcp.py  native.py  registry.py
replies/: linkedin-andrew-2026-03-11.md
scripts/: verify_reasoning.py
spec/: open-agent-spec-1.4.md  open-agent-spec-1.5.md  open-agent-spec-1.6.md
spec/conformance/: CONFORMANCE.md  PROTOCOL.md  README.md
spec/extensions/: README.md
spec/schema/: oas-schema-1.4.json  oas-schema-1.5.json  oas-schema-1.6.json
tests/: README.md  bad_test.py  conftest.py  test_agent.yaml  test_contract_validation.py  test_cortex_integration.py  test_custom_llm_router.py  test_enhanced_spec.py  test_generators.py  test_history_threading.py  test_iis.py  test_main.py  test_multi_engine.py  test_multi_task_workflows.py  test_orchestration.py  test_providers.py  test_public_api.py  test_reasoning.py  test_registry.py  test_runner.py  test_spec_composition.py  test_spec_test.py  test_tool_providers.py  test_usage.py  test_validation_errors.py
tests/integration/: test_dacp_logging_integration.py  test_templates.py
(+86 files in other folders)
