[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent-spec"
version = "0.2.4"
description = "Open Agent Spec CLI for bootstrapping AI agent projects"
authors = [{ name = "Andrew Whitehouse", email = "andrewswhitehouse@gmail.com" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml",
    "rich",
    "openai>=1.0.0",
    "behavioural-contracts>=0.1.2",
    "jinja2>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "typer[all]",
    "toml"
]

[project.scripts]
oas = "oas_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["oas_cli"]

[tool.hatch.metadata]
allow-direct-references = true
