[build-system]
# hatchling >= 1.26.1 avoids License-File in metadata 2.3 (PyPI/twine reject that mix)
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "open-agent-spec"
version = "1.5.0"
description = "YAML-first agent specs: run with `oa run` or generate a full Python project with `oa init`."
authors = [{ name = "Andrew Whitehouse", email = "andrewswhitehouse@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml",
    "rich",
    "jinja2>=3.0.0",
    "setuptools>=69.0.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=0.19.0",
    "tomli>=1.0.0; python_version < '3.11'",
    # Runtime: oas_cli.runtime and `oa init`-generated code use DACP adapters.
    "dacp>=0.3.3",
]

[project.urls]
Homepage = "https://www.openagentstack.ai"
Repository = "https://github.com/prime-vector/open-agent-spec"
Documentation = "https://github.com/prime-vector/open-agent-spec/blob/main/docs/REFERENCE.md"

[project.optional-dependencies]
# Install open-agent-spec[sdks] if you use `oa init`-generated projects or
# want the full SDK experience. `oa run` uses raw HTTP and needs neither.
sdks = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.0.0",
    "pytest-xdist>=3.0.0",
    "allure-pytest>=2.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.15.0,<0.16",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "types-PyYAML>=6.0.0",
    "types-setuptools>=69.0.0",
    "types-toml>=0.10.0",
    "types-jsonschema",
    # behavioural-contracts is optional at runtime; pinned here for dev/CI
    "behavioural-contracts==0.1.3",
    # dacp is a runtime dependency above; listed in dev for tests that pin versions
    "dacp>=0.3.3",
]
contracts = [
    "behavioural-contracts>=0.1.3",
]

[project.scripts]
oa = "oas_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["oas_cli"]
include = ["oas_cli/templates/*.yaml", "oas_cli/schemas/*.json"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
disable_error_code = ["has-type"]
# Don't follow imports into pytest/site-packages (avoids pattern-matching errors)
follow_imports = "skip"

# Ignore missing imports for test files
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"  # Use Unix line endings for consistency
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100
preview = false  # Use stable formatting rules

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length (handled by formatter)
    "E203",  # whitespace before ':' (formatter compatibility)
    "B008",  # do not perform function calls in argument defaults
    "RUF022",  # __all__ sorting
]

[tool.ruff.lint.per-file-ignores]
"examples/multi-agent/*" = ["N999"]  # directory name contains hyphen

